# atlantic-signatures

./: .gitignore  LICENSE.txt  MANIFEST.in  README.rst  requirements-docs.txt  robot training.txt  setup.cfg
atlantic-signatures/: MANIFEST.in  Test-1.cfg  requirements.txt  setup.cfg
atlantic-signatures/atlantic_signatures/: __main__.py  _create_compat.py  calculate.py  client.py  config_loader.py  create.py  demo.cfg  host.py  mycreate.py  socket_protocol.py
atlantic-signatures/atlantic_signatures/plotter/: config_loader.py  converter.py  defaults.py  plot.py
atlantic-signatures/atlantic_signatures/plotter/colors/: __init__.py
atlantic-signatures/atlantic_signatures/plotter/config/: Test-1.cfg  Test-1.csv  __init__.py  loader.py  reader.py  test.py
atlantic-signatures/atlantic_signatures/plotter/north_atlantic_signatures/: amam2021.py  beta_colors.csv  config.py  creator.py  defaults.py  parula_colors.csv  plot.py
atlantic-signatures/atlantic_signatures/plotter/plotters/: plotter.py  video_plotter.py
atlantic-signatures/atlantic_signatures/units/: __init__.py  units.txt
atlantic-signatures/docs/: conf.py  raspberrypi.rst  test.rst
atlantic-signatures/setup-files/: Pint-0.18-py2.py3-none-any.whl  setup-pi.sh  transfer-files.bat  wpa_supplicant.conf
atlantic-signatures/vicon_dssdk/: TestClientPython.py
atlantic_signatures/: __main__.py  calculate.py  client.py  config_loader.py  create.py  demo.cfg  host.py  mycreate.py  navigator.py  simulation.py  socket_protocol.py
docs/: host.rst  raspberrypi.rst  requirements.txt  test.rst  vicon.rst
(+37 files in other folders)
