[metadata]
name = atlantic_signatures
author = Luc Tourangeau
version = file: VERSION.txt
description = Robotic simulation of an agent as described in the north atlantic signatures paper

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
install_requires = file: requirements.txt
packages = find:

[options.entry_points]
console_scripts =
	atlantic_signatures=atlantic_signatures.__main__:main

[options.extras_require]
docs = file: requirements-docs.txt
plot = file: requirements-plot.txt
