[metadata]
name = atlantic_signatures
author = Luc Tourangeau
version = file: VERSION.txt
description = Robotic simulation of an agent as described in the north atlantic signatures paper

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:

[options.entry_points]
console_scripts =
	atlantic_signatures=atlantic_signatures.__main__:main
